_manifest/api-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: spring-app
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 2
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:1.0.0
          imagePullPolicy: Never
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
