_manifest/api-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: spring-app
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
